# nordic_sdk_cmake_port

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  board.cmake  build_options.cmake  compiler_setup.cmake  example_ble_hrs_freertos.cmake  main.c  sdk_config.h  toolchain.cmake
rtos/: rtos.cmake
